[fix #68773544] colour picker z-index issue
--HG--
branch : cssInNoImportant

--- a/app/themes/default/css/zurmo-lime.css
+++ b/app/themes/default/css/zurmo-lime.css
@@ -4567,7 +4567,7 @@ div.wide.form label.hasCheckBox {
   color: #525252 !important;
 }
 .has-color-picker .iris-picker {
-  z-index: 9999;
+  z-index: 99999;
   position: absolute;
 }
 .has-unit-input > span {
