--- a/app/themes/default/less/zurmo.less
+++ b/app/themes/default/less/zurmo.less
@@ -3545,7 +3545,7 @@ div.wide.form{
 		}
 	}
 	.iris-picker{
-		z-index: 9999;
+		z-index: 99999;
 		position: absolute;
 	}
 }
